# tflex_harness

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  SKILL.md  architecture.md  goal.md  install.md  metrics.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: install-smoke.yml  release-build.yml
agent_workspace/: helpers.py
agent_workspace/payloads/: fragment_lcs_assembly.json
agent_workspace/recipes/: README.md  create_2d_assembly_from_prototype.md  create_2d_assembly_from_prototype.recipe.json  create_2d_detail_from_prototype.md  create_2d_detail_from_prototype.recipe.json  create_3d_assembly_from_prototype.md  create_3d_assembly_from_prototype.recipe.json  create_3d_part_from_prototype.md  create_3d_part_from_prototype.recipe.json  create_assembly_drawing_from_prototype.md  create_assembly_drawing_from_prototype.recipe.json  create_assembly_drawing_with_spec_from_prototype.md  create_assembly_drawing_with_spec_from_prototype.recipe.json  create_detail_drawing_from_prototype.md  create_detail_drawing_from_prototype.recipe.json  create_electrical_doc_from_prototype.md  create_electrical_doc_from_prototype.recipe.json  create_empty_document.cs  create_empty_document.md  create_empty_document.recipe.json  create_fragment_3d_assembly_from_prototype.md  create_fragment_3d_assembly_from_prototype.recipe.json  create_fragment_3d_part_from_prototype.md  create_fragment_3d_part_from_prototype.recipe.json  create_fragment_sheet_metal_part_from_prototype.md  create_fragment_sheet_metal_part_from_prototype.recipe.json  create_simple_2d_line.cs  (+90 more)
(+125 files in other folders)
