[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tflex-harness"
version = "0.2.0"
description = "Thin MCP/harness for T-FLEX CAD 17 API docs search and C# snippet execution"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
mcp = ["mcp>=1.0"]

[project.scripts]
tflex-harness = "tflex_harness.cli:main"
tflex-harness-mcp = "tflex_harness.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tflex_harness = ["csharp_helpers/*.cs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires live T-FLEX CAD environment",
  "smoke: smoke tests for local tooling",
]
